# gg570_d200

./: .gitignore  README.md  environment.yml  manual.ipynb  pyproject.toml  try.ipynb
analyses/: analysis.ipynb  ate_estimation.ipynb  exploratory_analysis.ipynb  synthetic_data.ipynb
data/: covariate_scaler.joblib  df.csv
gg570_d200/auxiliary_functions/: ate_estimation_funcs.py  forest_riesz_func.py  forest_riesz_funcs.py  overlap_funcs.py  synthetic_funcs.py
gg570_d200/external_code/: forestriesz.py
implementation/: analysis.ipynb  data_analysis.ipynb  draft_analysis.ipynb
results/: ate_results.csv  gate_results.csv  iterations_results.csv  iterations_results_250.csv  iterations_results_5000.csv  synthetic_iterations_results.csv
results/TEMP 2/: synthetic_iterations_results.csv
