[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gg570_d200"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

]

[project.optional-dependencies]
dev = [

]

[tool.setuptools]
packages = ["gg570_d200"]